# Gest-o-de-Tarefas--API

./: README.md
gestao-tarefas-api/: Dockerfile  README.md  auth.py  database.py  docker-compose.yml  pyproject.toml  seeds.py
gestao-tarefas-api/app/: app.py  config.py  main.py  main.pyexit  models.py  schemas.py
gestao-tarefas-api/app/routes/: alunos.py  auth.py  disciplinas.py  professores.py  tarefas.py  turmas.py
gestao-tarefas-api/scripts/: test_login.py
